Item745: fr.po corrected on string 'Create New Topic' to shorten the translation removing the article
git-svn-id: http://svn.foswiki.org/trunk@1954 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/fr.po
+++ b/core/locale/fr.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-01-12 01:28+0100\n"
+"PO-Revision-Date: 2009-01-13 10:59+0100\n"
 "Last-Translator: RaulFRodriguez <RaulFRodriguez10@gmail.com>\n"
 "Language-Team:  <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -948,7 +948,7 @@ msgstr "Créer la page de test <nop>TestTopic###"
 #: ../PatternSkin/data/_default/WebLeftBar.txt:4
 #: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:4
 msgid "Create New Topic"
-msgstr "Créer une nouvelle page"
+msgstr "Créer nouvelle page"
 
 #: ../PatternSkin/data/System/PatternSkinWebCreateNewTopicTemplate.txt:43
 #: ../core/data/System/WebCreateNewTopicTemplate.txt:6
