Item1126: Proper fix for this issue. LocalLib.txt is optional, but setlib.cfg isn't. (ran perltidy -b too)
git-svn-id: http://svn.foswiki.org/trunk@2632 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/bin/changes
+++ b/core/bin/changes
@@ -40,7 +40,7 @@ BEGIN {
     my ($bin) = $FindBin::Bin =~ /^(.*)$/;
     use Cwd ();
     my ($setlibCfg) = Cwd::abs_path( "$bin/setlib.cfg" ) =~ /(.*)/;
-    eval 'require "'.$setlibCfg.'";';
+    require $setlibCfg;
 }
 
 use Foswiki;
