--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,3 +1,9 @@
+foswiki (1.0.4-1) unstable; urgency=low
+
+  * upgrade to foswiki 1.0.4
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Fri, 20 Mar 2009 09:53:40 +0100
+
 foswiki (1.0.0-1) unstable; urgency=low
 
   * migrate twiki packaging to foswiki fork to avoid trademark issues
