Item1334: set configure pwd from debconf, use templatelogin
git-svn-id: http://svn.foswiki.org/trunk@3214 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -2,6 +2,8 @@ foswiki (1.0.4-1) unstable; urgency=low
 
   * upgrade to foswiki 1.0.4
   * added Warning to configure Extension installer to _not_ use it
+  * switched to TemplateLogin - its much more useful
+  * set configure password from the debconf too
 
  -- Sven Dowideit <SvenDowideit@fosiki.com>  Fri, 20 Mar 2009 09:53:40 +0100
 
