Item1345: add a ShorterUrl.conf that users can link into their apache
git-svn-id: http://svn.foswiki.org/trunk@3232 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,3 +1,9 @@
+foswiki (1.0.4-2) unstable; urgency=low
+
+  * add a ShorterUrl.conf that can be 'just linked'
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Fri, 20 Mar 2009 09:53:40 +0100
+
 foswiki (1.0.4-1) unstable; urgency=low
 
   * upgrade to foswiki 1.0.4
