--- a/core/locale/de.po
+++ b/core/locale/de.po
@@ -7,12 +7,15 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-01-05 10:53+0100\n"
+"PO-Revision-Date: 2009-04-01 20:15+0200\n"
 "Last-Translator: André Ulrich <andre.ulrich@kontextwork.de>\n"
 "Language-Team: Foswiki German Translation Team <none>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 1.2.1\n"
 
 #. ($days)
 #: core/lib/Foswiki/Time.pm:316
@@ -22,7 +25,7 @@ msgstr "%*(%1,Tag) "
 #. ($hours)
 #: core/lib/Foswiki/Time.pm:319
 msgid "%*(%1,hour) "
-msgstr "%*(%1,Stunde) "
+msgstr "%*(%1,Stunde)"
 
 #. ($mins)
 #: core/lib/Foswiki/Time.pm:322
