Item955: test translation framework
git-svn-id: http://svn.foswiki.org/branches/Release01x00@3361 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/de.po
+++ b/core/locale/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-04-01 20:15+0200\n"
+"PO-Revision-Date: 2009-04-01 21:13+0200\n"
 "Last-Translator: André Ulrich <andre.ulrich@kontextwork.de>\n"
 "Language-Team: Foswiki German Translation Team <none>\n"
 "Language: de\n"
@@ -45,7 +45,7 @@ msgstr "%1"
 #: core/templates/registerfailednotremoved.tmpl:3
 #: core/templates/registerfailedremoved.tmpl:3
 msgid "%1 - Registration failure for %2 (%3)"
-msgstr "%1 - Registrierung von %2 (%3) fehlgeschlagen"
+msgstr "%1 - Registrierung von %2 (%3) fehlgeschlagen!"
 
 #: TopicUserMappingContrib/data/System/ManagingUsers.txt:116
 #: core/templates/registernotify.tmpl:3
