Item1458: Don't allow save from get Update the locale files for checkin 3517/3518
git-svn-id: http://svn.foswiki.org/branches/Release01x00@3519 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/Foswiki.pot
+++ b/core/locale/Foswiki.pot
@@ -426,7 +426,7 @@ msgid "..."
 msgstr ""
 
 #: core/templates/oopsmore.tmpl:14
-msgid "<a href='%1' rel='nofollow'>Edit settings</a> for this topic"
+msgid "Edit settings for this topic"
 msgstr ""
 
 #: core/data/System/WebChanges.txt:8
