--- a/core/locale/de.po
+++ b/core/locale/de.po
@@ -462,9 +462,9 @@ msgid "..."
 msgstr "..."
 
 #: core/templates/oopsmore.tmpl:14
-msgid "<a href='%1' rel='nofollow'>Edit settings</a> for this topic"
+msgid "Edit settings for this topic"
 msgstr ""
-"Für dieses Topic <a href='%1' rel='nofollow'>Einstellungen bearbeiten</a>"
+"Für dieses Topic Einstellungen bearbeiten"
 
 #: core/data/System/WebChanges.txt:8
 msgid ""
