--- a/core/locale/es.po
+++ b/core/locale/es.po
@@ -462,8 +462,8 @@ msgid "..."
 msgstr "..."
 
 #: core/templates/oopsmore.tmpl:14
-msgid "<a href='%1' rel='nofollow'>Edit settings</a> for this topic"
-msgstr "<a href='%1' rel='nofollow'>Editar preferencias</a> para este tema"
+msgid "Edit settings for this topic"
+msgstr "Editar preferencias para este tema"
 
 #: core/data/System/WebChanges.txt:8
 msgid ""
