--- a/core/locale/nl.po
+++ b/core/locale/nl.po
@@ -457,8 +457,8 @@ msgid "..."
 msgstr "..."
 
 #: core/templates/oopsmore.tmpl:14
-msgid "<a href='%1' rel='nofollow'>Edit settings</a> for this topic"
-msgstr "<a href='%1' rel='nofollow'>Bewerk instellingen</a> voor deze pagina"
+msgid "Edit settings for this topic"
+msgstr "Bewerk instellingen voor deze pagina"
 
 #: core/data/System/WebChanges.txt:8
 msgid ""
