--- a/core/locale/no.po
+++ b/core/locale/no.po
@@ -447,8 +447,8 @@ msgid "..."
 msgstr "..."
 
 #: core/templates/oopsmore.tmpl:14
-msgid "<a href='%1' rel='nofollow'>Edit settings</a> for this topic"
-msgstr "<a href='%1' rel='nofollow'>Rediger innstillinger</a> for denne siden"
+msgid "Edit settings for this topic"
+msgstr "Rediger innstillinger for denne siden"
 
 #: core/data/System/WebChanges.txt:8
 msgid ""
