--- a/core/locale/pl.po
+++ b/core/locale/pl.po
@@ -475,8 +475,8 @@ msgid "..."
 msgstr "..."
 
 #: core/templates/oopsmore.tmpl:14
-msgid "<a href='%1' rel='nofollow'>Edit settings</a> for this topic"
-msgstr "<a href='%1' rel='nofollow'>Edycja ustawień</a> bieżącej strony"
+msgid "Edit settings for this topic"
+msgstr "Edycja ustawień bieżącej strony"
 
 #: core/data/System/WebChanges.txt:8
 msgid ""
