--- a/core/locale/uk.po
+++ b/core/locale/uk.po
@@ -469,8 +469,8 @@ msgid "..."
 msgstr "..."
 
 #: core/templates/oopsmore.tmpl:14
-msgid "<a href='%1' rel='nofollow'>Edit settings</a> for this topic"
-msgstr "<a href='%1' rel='nofollow'>Редагувати налаштування</a> цієї теми"
+msgid "Edit settings for this topic"
+msgstr "Редагувати налаштування цієї теми"
 
 #: core/data/System/WebChanges.txt:8
 msgid ""
