Item1469: You cannot verify registration by clicking as instructed on the link in the email after the register blocks GET Earlier I reverted the complete block of GET with script register. I have now re-applied the block but excepted the method verify. This way all is blocked except the verification of registration via email link. That open entry should be harmless. I added a new string in the messages. Since it is a geek error message normal people should never see it does no harm. We already have similar error messages hardcoded in the perl code. I added the new string to all the locale files. And I translated those I could myself or with help from people available.
git-svn-id: http://svn.foswiki.org/trunk@3561 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/da.po
+++ b/core/locale/da.po
@@ -1617,6 +1617,10 @@ msgstr ""
 "Hvis du ikke har valgt et password endnu, eller du ønsker at nulstille det, "
 "så gå til: %1"
 
+#: core/templates/messages.tmpl:420
+msgid "The =%1= script can only be called with POST method."
+msgstr "Scriptet =%1= kan kun kaldes med metoden POST."
+
 #: core/templates/messages.tmpl:423
 msgid ""
 "If you received a link to this topic in an e-mail or just want to look at "
