--- a/core/locale/pt-br.po
+++ b/core/locale/pt-br.po
@@ -1592,6 +1592,10 @@ msgstr ""
 "Se você não tiver registrado uma senha ainda ou se quiser restaurá-la, vá "
 "para: %1"
 
+#: core/templates/messages.tmpl:420
+msgid "The =%1= script can only be called with POST method."
+msgstr "O script =%1= pode ser executado somente através do método POST"
+
 #: core/templates/messages.tmpl:423
 msgid ""
 "If you received a link to this topic in an e-mail or just want to look at "
