--- a/core/locale/ja.po
+++ b/core/locale/ja.po
@@ -1596,6 +1596,10 @@ msgstr ""
 "パスワードを設定していない場合、又はパスワードを変更したい場合は、 %1へ行って"
 "してください"
 
+#: core/templates/messages.tmpl:420
+msgid "The =%1= script can only be called with POST method."
+msgstr ""
+
 #: core/templates/messages.tmpl:423
 msgid ""
 "If you received a link to this topic in an e-mail or just want to look at "
@@ -1710,7 +1714,7 @@ msgid ""
 "as spaces will automatically be removed."
 msgstr ""
 "新トピックを作成する時、<a target='WikiWord' class='twikiPopUp' href='%1' "
-"rel='nofollow'>WikiWord</a>を½¿用したほうがいいです。そうしないと、オートリン"
+"rel='nofollow'>WikiWord</a>を½¿用したほうがいいです。そうしないと、オーリン"
 "クの生成が無効になる可能性があります。他に、トピック名として認められないキャ"
 "ラクター、例えばスペースは自動的に削除されます。"
 
