Item1458: spanish translation
git-svn-id: http://svn.foswiki.org/branches/Release01x00@3584 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/es.po
+++ b/core/locale/es.po
@@ -1622,7 +1622,7 @@ msgstr ""
 
 #: core/templates/messages.tmpl:420
 msgid "The =%1= script can only be called with POST method."
-msgstr ""
+msgstr "El =%1= script solo puede ser llamado por el metodo POST."
 
 #: core/templates/messages.tmpl:423
 msgid ""
