--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,3 +1,9 @@
+foswiki (1.0.5-1) unstable; urgency=high
+
+  * upgrade to foswiki 1.0.5
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Sun, 26 Apr 2009 09:53:40 +0100
+
 foswiki (1.0.4-2) unstable; urgency=low
 
   * add a ShorterUrl.conf that can be 'just linked'
