Item1601: make /usr/lib/cgi-bin/foswiki/LocalLib.cfg a config file
git-svn-id: http://svn.foswiki.org/trunk@3869 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,3 +1,9 @@
+foswiki (1.0.5-2) unstable; urgency=low
+
+  *  Item1601: make /usr/lib/cgi-bin/foswiki/LocalLib.cfg a config file 
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Sun, 26 Apr 2009 09:53:40 +0100
+
 foswiki (1.0.5-1) unstable; urgency=high
 
   * upgrade to foswiki 1.0.5
