--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -43,7 +43,7 @@ The following people are identified as authors of Foswiki:
 | Sven Dowideit        | Foswiki:Main.SvenDowideit      | Australia   |
 | Will Norris          | Foswiki:Main.WillNorris        | Mexico      |
 
-As stated Foswiki is based on TWiki. This document identifies the following
+As stated, Foswiki is based on TWiki. This document identifies the following
 people as authors of TWiki.
 
 | *Name*               | *Contact*                      | *Country*   |
