Item1725: Oops: we could not recognize you truncated in French language
git-svn-id: http://svn.foswiki.org/trunk@4159 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/fr.po
+++ b/core/locale/fr.po
@@ -1779,7 +1779,7 @@ msgstr "Seuls les membres du %1 sont autorisés à faire ça."
 
 #: ../core/templates/login.tmpl:8
 msgid "Oops: we could not recognize you. Try again or [[%1][reset your password]]."
-msgstr "Argh: nous n'avons pu vous authentifier. Réessayez, ou [[%1][réinitialiser votre mot de passe]]."
+msgstr "Argh: nous n\\'avons pu vous authentifier. Réessayez, ou [[%1][réinitialiser votre mot de passe]]."
 
 #: ../core/templates/renamedelete.tmpl:19
 msgid "Optionally change topic name:"
