--- a/core/locale/pt-br.po
+++ b/core/locale/pt-br.po
@@ -156,9 +156,30 @@ msgstr "%1 movido de %2 em %3 por %4"
 
 #: core/templates/validate.tmpl:14
 msgid ""
-"%1 received a request from your browser which has an expired validation key. "
-"This may be because someone is trying to post using your session. Please "
-"indicate whether you want %1 to process this request."
+"%1 has detected a suspicious request to change a page."
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"It can occur if you use the back button of the browser after saving a page "
+"and try to save the same page again."
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"It can also be caused by someone trying to use your identity to change "
+"content on %1 without your knowledge."
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"Press OK to confirm that this change was intentional - e.g you had "
+"clicked a button on a %1 page just before this message came up."
+msgstr ""
+
+#: core/templates/validate.tmpl:14
+msgid ""
+"Press Cancel otherwise."
 msgstr ""
 
 #: core/templates/messages.tmpl:22
@@ -2680,7 +2701,7 @@ msgid "Summaries"
 msgstr "Resumos"
 
 #: core/templates/validate.tmpl:8
-msgid "Suspicious request from browser"
+msgid "Confirmation required"
 msgstr ""
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:76
